# namespace_test

./: .gitignore  README.md  pyproject.toml  some_module.py  some_script.py
module_1/: file_creater.py  pyproject.toml
module_2/: data_processor.py  pyproject.toml
namespace_test/KeysightDCSupply/: blacs_tab.py  blacs_worker.py  labscript_device.py
namespace_test/KeysightXSeries/: blacs_tab.py  blacs_worker.py  labscript_device.py  register_classes.py
namespace_test/VISA/: __init__.py  register_classes.py
src/my_device/: device1.py
