

# module_1/pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["namespace_test"]
namespaces = true

[project]
name = "module1"
version = "0.0.0"
description = "Toy module for creating files"
license = { text = "None"}